--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>CSS animatin, transitions and transforms</title>
+    <title>Diamond</title>
                 
     <!-- OUR STYLESHEET -->
     <link rel="stylesheet" href="style.css" type="text/css" media="all">
@@ -16,6 +16,12 @@
 </head>
 
 <body>
+  <div class="diamond">
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+  </div>
 
 </body>
 </html>
